# trie-global-state-cli

./: LICENSE  README.md  app.py  boto3demo.py  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testSuite.txt  trie.pickle  trieProject.py  trie_global.py
appFolder/: trieProject.py
trie_cli_global.egg-info/: PKG-INFO
