[tool.poetry]
name = "trie-cli-global"
version = "0.1.0"
description = "A python package that allows you to interact with a global trie data structure."
authors = ["thequickbrownfoxjumpedoverthelazydog <c25kenneth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = '^0.4.0'
requests = '^2.25.1'

[tool.poetry.dev-dependencies]
boto3 = '1.18.37'
Flask = '1.1.2'
Flask-RESTful = '0.3.8'
gunicorn = '20.1.0'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
SlingshotTakeHomeProjectGithub.cli:app