[metadata]
name = trie-cli-global
version = 0.1.0
author = c25kenneth
description = A CLI that allows a user to update or see a data structure that is hosted globally
long_description_content_type = text/markdown
long_description = file:README.md
classifiers =
    Programming Language :: Python :: 3.9.6
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
